--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -2,12 +2,13 @@ $body-background-color: #fff !default;
 $background-color: #fff !default;
 $brand-primary: #2971ff !default;
 $light-gray: #eee !default;
-$text-color: rgba(black, 0.87) !default;
+$text-color: #0c1e3e !default;
 $secondary-text-color: rgba(opacify($text-color, 1), 0.54) !default;
 $secondary-nav-color: $secondary-text-color !default;
-$base-font-family: -apple-system, "Helvetica Neue", sans-serif !default;
+$base-font-family: "Proxima Nova",Circular,-apple-system,BlinkMacSystemFont,Roboto,"Helvetica Neue",sans-serif !default;
+$base-font-family: 微软雅黑, "Microsoft YaHei", "Hiragino Sans GB", sans-serif !default;
 $base-font-size: 1rem !default;
-$base-line-height: 1.5 !default;
+$base-line-height: 1.4258 !default;
 $grid-container-max-width: 45rem !default;
 $action-color: $brand-primary !default;
 $action-hover-color: darken($brand-primary, 15%) !default;
