--- a/app/assets/stylesheets/app/_layout.scss
+++ b/app/assets/stylesheets/app/_layout.scss
@@ -1,3 +1,7 @@
+html {
+  font-size: 100%;
+}
+
 body {
   background-color: $body-background-color;
   letter-spacing: -0.025rem;
@@ -7,6 +11,7 @@ body {
 .app {
   @include thredded--clearfix;
   -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   color: $text-color;
   font-family: $base-font-family;
   font-size: $base-font-size;
@@ -16,7 +21,9 @@ body {
 
 .app-container {
   margin: 0 auto;
-  max-width: ($grid-container-max-width + 4rem);
+  // max-width: ($grid-container-max-width + 4rem);
+  width: 80%;
+  max-width: 1100px;
   padding: 0 1.2rem 0.75rem 1.2rem;
   @include thredded-media-tablet-and-up {
     padding: 0 2rem 0.75rem 2rem;
