--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,5 @@
 <header role="banner" class="app-header">
+  <a href="/" class="logo"><img src="<%= image_url("logo.png") %>" alt="Decred" /></a>
   <span class="app-nav-auth">
     <% if current_user %>
       <%= link_to current_user.display_name, user_path(current_user) %>
