--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,8 @@
 <div class="footer">
-  <div>&copy; 2017 <strong>Decred</strong></div>
-  <div style="max-width: 400px; margin: 20px auto;">
-    <script type="text/javascript" src="https://files.coinmarketcap.com/static/widget/currency.js"></script><div class="coinmarketcap-currency-widget" data-currency="decred" data-base="USD" data-secondary="BTC" data-ticker="true" data-rank="true" data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
+  <div class="container">
+    <div>&copy; 2017 <strong>Decred</strong></div>
+    <div style="max-width: 400px; margin: 20px auto;">
+      <%#<script type="text/javascript" src="https://files.coinmarketcap.com/static/widget/currency.js"></script><div class="coinmarketcap-currency-widget" data-currency="decred" data-base="USD" data-secondary="BTC" data-ticker="true" data-rank="true" data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>%>
+        </div>
   </div>
 </div>
