--- a/app/assets/stylesheets/app/_layout.scss
+++ b/app/assets/stylesheets/app/_layout.scss
@@ -19,14 +19,17 @@ body {
   margin: 0;
 }
 
-.app-container {
+.container {
   margin: 0 auto;
   // max-width: ($grid-container-max-width + 4rem);
   max-width: 880px;
-  padding: 0 1.2rem 0.75rem 1.2rem;
+  padding: 0 1.2rem 0 1.2rem;
+  @include clearfix;
+
   @include thredded-media-tablet-and-up {
-    padding: 0 2rem 0.75rem 2rem;
+    padding: 0 2rem 0 2rem;
   }
+
   @media (min-width: $grid-container-max-width + 0.01rem) {
     padding-left: 3.5rem;
     padding-right: 3.5rem;
