--- a/app/views/thredded/topics/_topic.html.erb
+++ b/app/views/thredded/topics/_topic.html.erb
@@ -2,7 +2,12 @@
                 id:    dom_id(topic),
                 class: ['thredded--topics--topic', topic_css_classes(topic)],
                 data: {topic: topic.id, messageboard: topic.messageboard_id} do %>
+
   <div class="thredded--topics--posts-count"><%= topic.posts_count %></div>
+
+  <div class="thredded--topics--topic-avatar">
+    <%= image_tag Thredded.avatar_url.call(topic.last_user) %>
+  </div>
 
   <div class="thredded--topics--follow-info" title="<%= topic_follow_reason_text topic.follow_reason %>">
     <svg class="thredded--topics--follow-icon" viewBox="0 0 116 121" role="img">
