--- a/app/assets/stylesheets/app/_header.scss
+++ b/app/assets/stylesheets/app/_header.scss
@@ -25,7 +25,7 @@
 
   width: 105px;
 
-  background: transparent url("decred-logo-primary_set.png") center/contain no-repeat;
+  background: transparent image-url("decred-logo-primary_set.png") center/contain no-repeat;
 }
 
 .app-nav-auth {
