--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,11 @@
 <div class="footer">
   <div class="container">
     <div>&copy; 2017 <strong>Decred</strong></div>
+    <div style="color: #C4CBD2; font-size: 12px;">
+      <p>Decred 是整个去中心化发展过程中孕育出的下一代加密货币! 它同时是一个去中心化的自治组织，the DAO!</p>
+    </div>
     <div style="max-width: 400px; margin: 20px auto;">
-      <%#<script type="text/javascript" src="https://files.coinmarketcap.com/static/widget/currency.js"></script><div class="coinmarketcap-currency-widget" data-currency="decred" data-base="USD" data-secondary="BTC" data-ticker="true" data-rank="true" data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>%>
-        </div>
+      <script type="text/javascript" src="https://files.coinmarketcap.com/static/widget/currency.js"></script><div class="coinmarketcap-currency-widget" data-currency="decred" data-base="USD" data-secondary="BTC" data-ticker="true" data-rank="true" data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
+    </div>
   </div>
 </div>
