--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,7 +10,7 @@
       <% end %>
     </span>
 
-    <a class="app-nav-logo" href="/"><%= t 'brand.name' %></a>
+    <a class="app-nav-logo" href="/"><%= t 'brand.name' %><span>中国</span></a>
 
     <div class="app-nav-theme hide">
       <span class="app-nav-text"><%= t 'nav.theme' %>:</span>
