--- a/app/assets/stylesheets/app/_header.scss
+++ b/app/assets/stylesheets/app/_header.scss
@@ -1,10 +1,12 @@
 @import "./header/theme_selector";
 
 .app-header {
-  margin-bottom: 10px;
-  border-bottom: 1px solid #ddd;
   @include clearfix;
   font-size: 14px;
+  margin-bottom: 10px;
+  // @include linear-gradient(45deg, "#2ed6a1", "#2971ff");
+  // background-color: #2252a3;
+  border-bottom: 2px solid #ddd;
 
   a {
     display: inline-block;
@@ -26,6 +28,19 @@
   width: 105px;
 
   background: transparent image-url("decred-logo-primary_set.png") center/contain no-repeat;
+  // background: transparent image-url("logo.png") center/contain no-repeat;
+  position: relative;
+
+  span {
+    display: block;
+    color: #0c1e3e !important;
+    text-indent: 0;
+    font-weight: 400;
+    position: absolute;
+    top: 10px;
+    right: 0;
+    font-size: 9px;
+  }
 }
 
 .app-nav-auth {
