--- a/app/assets/stylesheets/_thredded-custom.scss
+++ b/app/assets/stylesheets/_thredded-custom.scss
@@ -148,8 +148,7 @@
   width: 1.45rem;
   height: 1.45rem;
   line-height: 1.45rem;
-  left: auto;
-  right: 0;
+  left: -4rem;
   top: 10px;
   border-radius: 100%;
 }
