Update: devise/passwords

--- a/app/assets/stylesheets/app/_typography.scss
+++ b/app/assets/stylesheets/app/_typography.scss
@@ -24,6 +24,8 @@ h2 {
 
 a {
   @extend %thredded--link;
+  // text-decoration: underline !important;
+
   &:hover {
     text-decoration: underline !important;
   }
