--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,6 +6,8 @@
         <%= link_to t('nav.sign_out'), main_app.destroy_user_session_path,
                     method: :delete %>
       <% else %>
+        <%= link_to t('nav.sign_up'), main_app.new_user_registration_path %>
+        <span style="color: #e7eaed; margin: 0 5px;">|</span>
         <%= link_to t('nav.sign_in'), main_app.new_user_session_path %>
       <% end %>
     </span>
