--- a/app/assets/stylesheets/_thredded-custom.scss
+++ b/app/assets/stylesheets/_thredded-custom.scss
@@ -105,7 +105,7 @@
 
     .thredded--messageboard--title {
       font-weight: bold;
-      text-decoration: underline !important;
+      // text-decoration: underline !important;
     }
   }
 }
@@ -118,6 +118,7 @@
   font-size: 20px;
   line-height: 1;
   margin-bottom: 10px;
+  // text-decoration: underline !important;
 }
 
 .thredded--messageboard--description {
