Update: topic count color

--- a/app/assets/stylesheets/_thredded-custom.scss
+++ b/app/assets/stylesheets/_thredded-custom.scss
@@ -156,7 +156,7 @@
 
 .thredded--topic-unread > .thredded--topics--posts-count {
   font-weight: 500 !important;
-  background-color: #fd714b;
+  background-color: #69d3f5;
 }
 
 .thredded--topic-read > .thredded--topics--posts-count {
