--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -5,8 +5,8 @@ $light-gray: #eee !default;
 $text-color: #0c1e3e !default;
 $secondary-text-color: rgba(opacify($text-color, 1), 0.54) !default;
 $secondary-nav-color: $secondary-text-color !default;
-$base-font-family: "Proxima Nova",Circular,-apple-system,BlinkMacSystemFont,Roboto,"Helvetica Neue",sans-serif !default;
-$base-font-family: 微软雅黑, "Microsoft YaHei", "Hiragino Sans GB", sans-serif !default;
+$base-font-family: "Helvetica Neue",sans-serif !default;
+// $base-font-family: 微软雅黑, "Microsoft YaHei", "Hiragino Sans GB", sans-serif !default;
 $base-font-size: 1rem !default;
 $base-line-height: 1.4258 !default;
 $grid-container-max-width: 45rem !default;
