--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,8 @@
 
     <div class="app-content-container">
       <div class="container">
+        <%= render 'shared/stats' %>
+
         <%= yield %>
       </div>
     </div>
