--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,6 +3,7 @@
     <span class="app-nav-auth">
       <% if current_user %>
         <%= link_to current_user.display_name, user_path(current_user) %>
+        <span style="color: #e7eaed; margin: 0 5px;">|</span>
         <%= link_to t('nav.sign_out'), main_app.destroy_user_session_path,
                     method: :delete %>
       <% else %>
