--- a/app/views/thredded/topics/_topic.html.erb
+++ b/app/views/thredded/topics/_topic.html.erb
@@ -47,5 +47,5 @@
 
 <% if local_assigns[:sticky_topics_divider] &&
     !topic_iteration.last? && topic.sticky? && !topics[topic_counter + 1].sticky? %>
-  <%= render 'thredded/topics/sticky_topics_divider' %>
+  <%# render 'thredded/topics/sticky_topics_divider' %>
 <% end %>
