--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,20 @@
 <div class="footer">
   <div class="container">
-    <div>&copy; 2017 <strong>Decred</strong></div>
-    <div style="color: #C4CBD2; font-size: 12px;">
-      <p>Decred 是整个去中心化发展过程中孕育出的下一代加密货币! 它同时是一个去中心化的自治组织，the DAO!</p>
+	  <div style="margin-bottom: 20px; text-align: center;"><span style="display: inline-block; padding: 2px 5px 1px; background-color: #C4CBD2; color: #fff; border-radius: 3px;">QQ群: <strong>258-412-796<sup>(1 群)</sup></strong>, <strong>513-227-294<sup>(2 群)</sup></strong>, <strong>611-261-720<sup>(挖矿)</sup></strong></span></div>
+	  <div class="site-links">
+	  	<a href="https://decred.org/zh" target="_blank">官网</a>
+		<a href="https://mainnet.decred.org/" target="_blank">区块浏览器</a>
+		<a href="https://stats.decred.org/" target="_blank">网络状态</a>
+		<a href="https://voting.decred.org/" target="_blank">投票面板</a>
+		<a href="https://decred.org/zh/downloads/" target="_blank">下载<span class="arrow hide">&#x25BC;</span></a>
+		<a href="https://github.com/decred" target="_blank">开发者</a>
+		<a href="http://docs.getdecred.org" target="_blank">中文文档</a>
+		<a href="https://reddit.com/r/decred/" target="_blank">Reddit 社区</a>
+		<a href="https://decred.slack.com/" target="_blank">Slack 社区</a>
+	  </div>
+    <div style="color: #C4CBD2; font-size: 13px;">
+      <p style="margin: 0 0 5px; font-size: 14px; padding: 0 20%; line-height: 1.1;">Decred is an open and progressive cryptocurrency with a system of community-based governance integrated into its blockchain.</p>
     </div>
+    <div style="color: #C4CBD2;">&copy; 2017 <strong>dcr66.com</strong></div>
   </div>
 </div>
