--- a/app/assets/stylesheets/app/_header.scss
+++ b/app/assets/stylesheets/app/_header.scss
@@ -33,7 +33,8 @@
   position: relative;
 
   span {
-    display: block;
+    // display: block;
+	display: none !important;
     color: #c4cbd2 !important;
     text-indent: 0;
     font-weight: 400;
@@ -46,8 +47,11 @@
 
 .price {
   float: left;
-  font-size: 1rem;
+  font-size: 1.115rem;
+  line-height: 1.25;
   color: #c4cbd2;
+  height: 50px;
+  position: relative;
 
   table {
     @include margin(0 null);
@@ -61,6 +65,7 @@
   .price-green, .price-red {
     abbr {
       margin-right: 3px;
+      text-decoration: none;
     }
 
     > span {
@@ -77,6 +82,8 @@
     color: #fd714a;
     .icon-trend {
       display: inline-block;
+      font-size: .9rem;
+      @include position(relative, -2px null null);
     }
   }
 }
@@ -93,4 +100,92 @@
       font-size: 1rem;
     }
   }
+}
+
+.cssload-loader {
+	width: 20px;
+	height: 20px;
+	border-radius: 50%;
+	display: block;
+	position: absolute;
+	top: 15px;
+	left: 0;
+	vertical-align: middle;
+}
+.cssload-loader,
+.cssload-loader:before,
+.cssload-loader:after {
+	animation: 1s infinite ease-in-out;
+		-o-animation: 1s infinite ease-in-out;
+		-ms-animation: 1s infinite ease-in-out;
+		-webkit-animation: 1s infinite ease-in-out;
+		-moz-animation: 1s infinite ease-in-out;
+}
+.cssload-loader:before,
+.cssload-loader:after {
+	width: 100%; 
+	height: 100%;
+	border-radius: 50%;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+.cssload-loader:before,
+.cssload-loader:after {
+    content: "";
+}
+
+.cssload-loader {
+    background-color: white;
+    animation: cssload-flower-fan 0.4s infinite linear;
+		-o-animation: cssload-flower-fan 0.4s infinite linear;
+		-ms-animation: cssload-flower-fan 0.4s infinite linear;
+		-webkit-animation: cssload-flower-fan 0.4s infinite linear;
+		-moz-animation: cssload-flower-fan 0.4s infinite linear;
+}
+.cssload-loader:before{
+	content: "";
+	width: 80%;
+	height: 80%;
+	background-color: white;
+	top: 10%;
+	left: 10%;
+	box-shadow: 5px -3px 0 #2971ff,
+				5px 5px 0 #2ed8a3,
+				-3px 5px 0 #fd714a,
+				-5px -5px 0 #2252a3;
+}
+.cssload-loader:after{
+	content: "";
+	border: 6px solid white;
+	z-index: 2;
+	top: -6px;
+	left: -6px;
+}
+
+
+@keyframes cssload-flower-fan {
+	0%   { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
+}
+
+@-o-keyframes cssload-flower-fan {
+	0%   { -o-transform: rotate(0deg); }
+	100% { -o-transform: rotate(360deg); }
+}
+
+@-ms-keyframes cssload-flower-fan {
+	0%   { -ms-transform: rotate(0deg); }
+	100% { -ms-transform: rotate(360deg); }
+}
+
+@-webkit-keyframes cssload-flower-fan {
+	0%   { -webkit-transform: rotate(0deg); }
+	100% { -webkit-transform: rotate(360deg); }
+}
+
+@-moz-keyframes cssload-flower-fan {
+	0%   { -moz-transform: rotate(0deg); }
+	100% { -moz-transform: rotate(360deg); }
 }
