--- a/app/assets/stylesheets/app/_header.scss
+++ b/app/assets/stylesheets/app/_header.scss
@@ -3,9 +3,9 @@
 .app-header {
   @include clearfix;
   font-size: 14px;
-  margin-bottom: 10px;
   // @include linear-gradient(45deg, "#2ed6a1", "#2971ff");
   // background-color: #2252a3;
+  margin-bottom: 10px;
   border-bottom: 2px solid #ddd;
 
   a {
@@ -64,12 +64,17 @@
 
   .price-green, .price-red {
     abbr {
-      margin-right: 3px;
+      margin-right: 1px;
       text-decoration: none;
     }
 
     > span {
       color: #c4cbd2;
+    }
+
+    sub {
+      font-size: .75rem;
+      @include position(relative, -2px null null 2px);
     }
   }
 
@@ -85,6 +90,14 @@
       font-size: .9rem;
       @include position(relative, -2px null null);
     }
+  }
+
+  .text-green {
+    color: #41bf53;
+  }
+
+  .text-red {
+    color: #fd714a;
   }
 }
 
