--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -12,8 +12,8 @@
 		<a href="https://reddit.com/r/decred/" target="_blank">Reddit 社区</a>
 		<a href="https://decred.slack.com/" target="_blank">Slack 社区</a>
 	  </div>
-    <div style="color: #C4CBD2; font-size: 13px;">
-      <p style="margin: 0 0 5px; font-size: 14px; padding: 0 20%; line-height: 1.1;">Decred is an open and progressive cryptocurrency with a system of community-based governance integrated into its blockchain.</p>
+    <div style="color: #C4CBD2; font-size: 13px; text-align: center;">
+      <p style="margin: 0 auto 5px; font-size: 14px; max-width: 400px; line-height: 1.25; font-style: italic;">Decred 正在构建一个全球通用的稳健<span>货币</span>，基于强大的去中心化分类账技术以及社区领导的共识治理机制。</p>
     </div>
     <div style="color: #C4CBD2;">&copy; 2017 <strong>dcr66.com</strong></div>
   </div>
